kubernetes/kubernetes-dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "kubernetes-dashboard-ingress"
  annotations:
    kubernetes.io/ingress.class: "public"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^(/dashboard)$ $1/ redirect;
  namespace: kube-system
spec:
  rules:
    - host: mk8s.info
      http:
        paths:
         - path: /dashboard(/|$)(.*)
           pathType: ImplementationSpecific
           backend: 
            service: 
              name: kubernetes-dashboard
              port: 
                number: 443
