kubernetes/tekton-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-ingress
  namespace: tekton-pipelines
  annotations:
    kubernetes.io/ingress.class: 'public'
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: tekton-ingress-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^(/tekton)$ $1/ redirect;
spec:
  rules:
    - host: mk8s.info
      http:
        paths: 
         - path: /tekton(/|$)(.*)
           pathType: ImplementationSpecific
           backend:
             service: 
               name: tekton-dashboard
               port: 
                 number: 9097
